code_size2 (defined in stub_routines_x86.hpp) is too small on new Skylake CPUs

XMLWordPrintable

    • b11
    • x86
    • windows

        The VM crashes during a slowdebug build on my Skylake based Windows/x64 machine, because code_size2 (defined in stub_routines_x86.hpp) is too small. This is probably caused by the new stub code for GHASH, which is only enabled on relatively new x86 CPUs.
        Linux builds on the same machine work.

              Assignee:
              Ralf Schmelter
              Reporter:
              Ralf Schmelter
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: