8219712: code_size2 (defined in stub_routines_x86.hpp) is too small on new Skylake CPUs

Reviewed-by: mbaesken, dholmes, kvn